tests/invalid/const_without_initializer.wio
fn Entry(args: string[]) -> i32 {
    const value: i32;
    return 0;
}
